--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Happy birthday cake |</title>
   <link rel="stylesheet" href="https://public.codepenassets.com/css/reset-2.0.min.css">
-<link rel="stylesheet" href="./style.css">
-
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -166,8 +165,14 @@
 </svg>
 <div class="text">
   <h1>happy birthday!</h1>
-  
   <p>Mizuuuuuuuuuuuuuuuuuuu</p>
+</div>
+
+<div class="song-player">
+    <audio controls>
+        <source src="your-birthday-song.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 </div>
 
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
