--- a/index.html
+++ b/index.html
@@ -5,16 +5,10 @@
   <title>Happy birthday cake |</title>
   <link rel="stylesheet" href="https://public.codepenassets.com/css/reset-2.0.min.css">
   <link rel="stylesheet" href="./style.css">
-  <style>
-    /* Inline style for auto-play, as it's often more reliable here */
-    audio {
-      display: none; /* Hide the audio player controls */
-    }
-  </style>
 </head>
 <body>
 
-<div class="bow-rain-container"></div> <div class="candle">
+<div class="candle">
     <div class="fire"></div>
     <div class="fire"></div>
     <div class="fire"></div>
@@ -80,11 +74,11 @@
 		C98.411-75.883,101.368-75.592,101.368-73.685z">
         <animate id="relleno_1" attributeName="d" calcMode="spline" keySplines="0 0 1 1; 0 0 1 1; 0 0 0.6 1" begin="bizcocho_1.end" dur="0.5s" fill="freeze" values="
                           M101.368-73.685c0,12.164,0,15.18,0,28.519c0,22.702,0-13.661,0,8.304c0,14.48,0,18.233,0,30.512
-		c0,1.753-2.958,1.847-2.958,0c0-12.68,0-16.277,0-30.401c0-21.983,0-11.66,0-8.305c0-13.027,0-15.992,0-28.628
+		c0,1.753-2.958,1.847-2.958,0c0-12.68,0-16.277,0-30.401c0-21.983,0,11.66,0-8.305c0-13.027,0-15.992,0-28.628
 		C98.411-75.883,101.368-75.592,101.368-73.685z
                           ;
                           M101.368,350.885c0,12.164,0,65.18,0,78.518c0,22.703,0-33.66,0-11.695c0,14.48,0,28.232,0,40.512
-		c0,1.753-2.958,1.847-2.958,0c0-12.68,0-26.277,0-40.402c0-21.982,0,31.66,0-11.695c0-13.027,0-65.992,0-78.627
+		c0,1.753-2.958,1.847-2.958,0c0-12.68,0-26.277,0-40.402c0-21.982,0,31.66,0,11.695c0-13.027,0-65.992,0-78.627
 		C98.411,348.686,101.368,348.977,101.368,350.885z
                           ;
                           M128.38,447.567c37.626,6.312,39.303,13.658,26.833,12.833c-22.653-1.499-13.636-0.831-23.302-0.831
@@ -175,20 +169,13 @@
 </div>
 
 <div class="song-player">
-    <audio id="birthdaySong" autoplay loop>
+    <audio controls>
         <source src="your-birthday-song.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 </div>
 
-<script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src="./script.js"></script>
-<script>
-    // Ensure the audio plays automatically when the page loads
-    window.addEventListener('load', function() {
-        document.getElementById('birthdaySong').play();
-    });
-</script>
+  <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
 
 </body>
 </html>
